[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-tools"
dynamic = ["version"]
description = 'Some interesting llm tools'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Bruce Li", email = "jiangwlee@163.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "mysql-connector-python>=9.0.0"
]

[project.urls]
Documentation = "https://github.com/Bruce Li/llm-tools#readme"
Issues = "https://github.com/Bruce Li/llm-tools/issues"
Source = "https://github.com/Bruce Li/llm-tools"

[tool.hatch.version]
path = "src/llm_tools/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/llm_tools tests}"

[tool.coverage.run]
source_pkgs = ["llm_tools", "tests"]
branch = true
parallel = true
omit = [
  "src/llm_tools/__about__.py",
]

[tool.coverage.paths]
llm_tools = ["src/llm_tools", "*/llm-tools/src/llm_tools"]
tests = ["tests", "*/llm-tools/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-cov"
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.12.6"]
default-args = ["tests"]
extra-args = ["-vv"]

[tool.hatch.envs.hatch-test.scripts]
run = "pytest{env:HATCH_TEST_ARGS:} {args}"
